dfir_rs/tests/compile-fail/stable/surface_inline_cycle.stderr
error: Not a DAG: [GraphNodeId(3v1), GraphNodeId(2v1)]
 --> tests/compile-fail/stable/surface_inline_cycle.rs:4:31
  |
4 |         my_union = union() -> map(|x: i32| x + 1) -> my_union;
  |                               ^^^
